@@ -740,6 +740,7 @@ Mark Sapiro
 Ty Sarna
 Ben Sayer
 sbt
+Marco Scataglini
 Michael Scharf
 Neil Schemenauer
 David Scherer
@@ -759,6 +760,7 @@ Nick Seidenman
 Žiga Seilnach
 Fred Sells
 Jiwon Seo
+Roger Serwy
 Jerry Seutter
 Denis Severson
 Ian Seyer
